--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -22,6 +22,14 @@
 		</activity>
 
 		
+				<activity android:name="com.test.view.TranslucentGLSurfaceViewActivity" android:configChanges="orientation|keyboardHidden"
+			android:label="@string/app_name"  android:icon="@drawable/icon" android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+			android:windowSoftInputMode="adjustPan">
+			<intent-filter>
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		
     </application>
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
