--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -29,7 +29,13 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		
+						<activity android:name="com.test.view.FrameBufferObjectActivity" android:configChanges="orientation|keyboardHidden"
+			android:label="@string/app_name"  android:icon="@drawable/icon" android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+			android:windowSoftInputMode="adjustPan">
+			<intent-filter>
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
     </application>
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
