--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ proguard/
 /android/obj/local/armeabi
 
 /android/.settings/*.prefs
+/native-activity/obj/local/armeabi
+
+/native-activity/libs/armeabi
+
+/native-activity/.cproject
