--- a/native-frame/.cproject
+++ b/native-frame/.cproject
@@ -20,7 +20,7 @@
 					<folderInfo id="com.android.toolchain.gcc.1932317062.1214022364" name="/" resourcePath="">
 						<toolChain id="com.android.toolchain.gcc.857172745" name="com.android.toolchain.gcc" superClass="com.android.toolchain.gcc">
 							<targetPlatform binaryParser="org.eclipse.cdt.core.ELF" id="com.android.targetPlatform.557149690" isAbstract="false" superClass="com.android.targetPlatform"/>
-							<builder id="com.android.builder.1483821527" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Android Builder" superClass="com.android.builder">
+							<builder arguments="NDK_DEBUG=1 APP_ABI=armeabi" command="ndk-build" id="com.android.builder.1483821527" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Android Builder" superClass="com.android.builder">
 								<outputEntries>
 									<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="outputPath" name="obj"/>
 									<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="outputPath" name="libs"/>
@@ -36,6 +36,10 @@
 									<listOptionValue builtIn="false" value="&quot;E:\android-ndk-r9d\sources\cxx-stl\stlport\stlport&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;E:\android-ndk-r9d\toolchains\arm-linux-androideabi-4.8\prebuilt\windows-x86_64\include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;E:\android-ndk-r9d\toolchains\arm-linux-androideabi-4.8\prebuilt\windows-x86_64\lib\gcc\arm-linux-androideabi\4.8\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;E:\android-ndk-r9d\toolchains\arm-linux-androideabi-4.6\prebuilt\windows-x86_64\lib\gcc\arm-linux-androideabi\4.6\include-fixed&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/TeapotNativeActivity/jni}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;E:\android-ndk-r9d\sources\cxx-stl\gabi++\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;E:\android-ndk-r9d\toolchains\x86-4.8\prebuilt\windows-x86_64\lib\gcc\i686-linux-android\4.8\include&quot;"/>
 								</option>
 								<inputType id="com.android.gcc.inputType.2103949927" superClass="com.android.gcc.inputType"/>
 							</tool>
@@ -59,4 +63,10 @@
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="com.android.AndroidPerProjectProfile"/>
 		</scannerConfigBuildInfo>
 	</storageModule>
+	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Default">
+			<resource resourceType="PROJECT" workspacePath="/TeapotNativeActivity"/>
+		</configuration>
+	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
