--- a/native-frame/AndroidManifest.xml
+++ b/native-frame/AndroidManifest.xml
@@ -1,24 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- BEGIN_INCLUDE(manifest) -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sample.teapot"
-    android:versionCode="1"
-    android:versionName="1.0" >
+        package="com.example.native_frame"
+        android:versionCode="1"
+        android:versionName="1.0">
 
     <!-- This is the platform API where NativeActivity was introduced. -->
     <uses-sdk android:minSdkVersion="16" />
-    <uses-feature android:glEsVersion="0x00020000"></uses-feature>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:hasCode="true"
-        android:name="com.sample.teapot.TeapotApplication"
-        >
+
+    <!-- This .apk has no Java code itself, so set hasCode to false. -->
+    <application android:label="@string/app_name" android:hasCode="false" android:debuggable="true">
 
         <!-- Our activity is the built-in NativeActivity framework class.
              This will take care of integrating with our NDK code. -->
-        <activity android:name="com.sample.teapot.TeapotNativeActivity"
+        <activity android:name="android.app.NativeActivity"
                 android:label="@string/app_name"
                 android:configChanges="orientation|keyboardHidden">
             <!-- Tell NativeActivity the name of or .so -->
@@ -30,4 +25,6 @@
             </intent-filter>
         </activity>
     </application>
-</manifest>
+
+</manifest> 
+<!-- END_INCLUDE(manifest) -->
