--- a/native-frame/AndroidManifest.xml
+++ b/native-frame/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
     </application>
+	<uses-feature android:glEsVersion="0x00020000"/>
 
 </manifest> 
 <!-- END_INCLUDE(manifest) -->
