--- a/hsrl-frame/AndroidApk/AndroidManifest.xml
+++ b/hsrl-frame/AndroidApk/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- BEGIN_INCLUDE(manifest) -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.example.native_activity"
+        package="com.open.hsrl"
         android:versionCode="1"
         android:versionName="1.0">
 
@@ -9,7 +9,7 @@
   <uses-sdk android:minSdkVersion="9" />
 
   <!-- This .apk has no Java code itself, so set hasCode to false. -->
-  <application android:label="@string/app_name" android:hasCode="false">
+  <application android:label="@string/app_name" android:hasCode="false" android:debuggable="true">
 
     <!-- Our activity is the built-in NativeActivity framework class.
              This will take care of integrating with our NDK code. -->
@@ -18,13 +18,14 @@
             android:configChanges="orientation|keyboardHidden">
       <!-- Tell NativeActivity the name of or .so -->
       <meta-data android:name="android.app.lib_name"
-              android:value="native-activity" />
+              android:value="hsrl-frame" />
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
   </application>
+  <uses-feature android:glEsVersion="0x00020000"/>
 
 </manifest>
 <!-- END_INCLUDE(manifest) -->
