--- a/hsrl-frame/hsrl-frame.vcxproj
+++ b/hsrl-frame/hsrl-frame.vcxproj
@@ -16,19 +16,22 @@
     <ProjectName>hsrl-frame</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
+  <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|Android'">
+    <AndroidAPILevel>android-19</AndroidAPILevel>
+  </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Android'">
-    <IncludePath>$(IncludePath)</IncludePath>
+    <IncludePath>E:\codespace\android\hsrl\hsrl-frame\CppSource\libs;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Android'">
     <AntBuild>
       <AntBuildPath>$(ProjectDir)\AndroidApk</AntBuildPath>
     </AntBuild>
     <Link>
-      <AdditionalOptions>-ljnigraphics -llog -landroid -lEGL -lGLESv1_CM %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>-ljnigraphics -lGLESv1_CM -shared -llog -landroid -lEGL -lGLESv2 %(AdditionalOptions)</AdditionalOptions>
       <AdditionalLibraryDirectories>E:\codespace\android\test\bitmap-plasma\CppSource\static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -49,13 +52,34 @@
   <ItemGroup>
     <ClCompile Include="..\hello-gl2\CppSource\hsrl\SpaceHolder.cpp" />
     <ClCompile Include="..\hello-gl2\CppSource\hsrl\tools.cpp" />
-    <ClCompile Include="CppSource\main.c" />
-    <ClCompile Include="CppSource\native_app_glue\android_native_app_glue.c" />
+    <ClCompile Include="CppSource\libs\cpufeatures\cpu-features.c" />
+    <ClCompile Include="CppSource\libs\native_app_glue\android_native_app_glue.c" />
+    <ClCompile Include="CppSource\libs\ndk_helper\gestureDetector.cpp" />
+    <ClCompile Include="CppSource\libs\ndk_helper\gl3stub.c" />
+    <ClCompile Include="CppSource\libs\ndk_helper\GLContext.cpp" />
+    <ClCompile Include="CppSource\libs\ndk_helper\interpolator.cpp" />
+    <ClCompile Include="CppSource\libs\ndk_helper\JNIHelper.cpp" />
+    <ClCompile Include="CppSource\libs\ndk_helper\perfMonitor.cpp" />
+    <ClCompile Include="CppSource\libs\ndk_helper\shader.cpp" />
+    <ClCompile Include="CppSource\libs\ndk_helper\tapCamera.cpp" />
+    <ClCompile Include="CppSource\libs\ndk_helper\vecmath.cpp" />
+    <ClCompile Include="CppSource\mainEntry.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\hello-gl2\CppSource\hsrl\SpaceHolder.hpp" />
     <ClInclude Include="..\hello-gl2\CppSource\hsrl\tools.h" />
-    <ClInclude Include="CppSource\native_app_glue\android_native_app_glue.h" />
+    <ClInclude Include="CppSource\libs\cpufeatures\cpu-features.h" />
+    <ClInclude Include="CppSource\libs\native_app_glue\android_native_app_glue.h" />
+    <ClInclude Include="CppSource\libs\ndk_helper\gestureDetector.h" />
+    <ClInclude Include="CppSource\libs\ndk_helper\gl3stub.h" />
+    <ClInclude Include="CppSource\libs\ndk_helper\GLContext.h" />
+    <ClInclude Include="CppSource\libs\ndk_helper\interpolator.h" />
+    <ClInclude Include="CppSource\libs\ndk_helper\JNIHelper.h" />
+    <ClInclude Include="CppSource\libs\ndk_helper\NDKHelper.h" />
+    <ClInclude Include="CppSource\libs\ndk_helper\perfMonitor.h" />
+    <ClInclude Include="CppSource\libs\ndk_helper\shader.h" />
+    <ClInclude Include="CppSource\libs\ndk_helper\tapCamera.h" />
+    <ClInclude Include="CppSource\libs\ndk_helper\vecmath.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
