--- a/hsrl-frame/hsrl-frame.vcxproj
+++ b/hsrl-frame/hsrl-frame.vcxproj
@@ -64,6 +64,7 @@
     <ClCompile Include="CppSource\libs\ndk_helper\tapCamera.cpp" />
     <ClCompile Include="CppSource\libs\ndk_helper\vecmath.cpp" />
     <ClCompile Include="CppSource\mainEntry.cpp" />
+    <ClCompile Include="CppSource\mainOpenGL.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\hello-gl2\CppSource\hsrl\SpaceHolder.hpp" />
@@ -80,6 +81,7 @@
     <ClInclude Include="CppSource\libs\ndk_helper\shader.h" />
     <ClInclude Include="CppSource\libs\ndk_helper\tapCamera.h" />
     <ClInclude Include="CppSource\libs\ndk_helper\vecmath.h" />
+    <ClInclude Include="CppSource\mainOpenGL.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
