rewrite the Matrix class to resolve the memory leak puzzle.
Do not use reference when passing the access of the local data beyond the functions and the classes, instead of pointers as the form of python and JavaScript does.

--- a/hsrl-test2/hsrl-test2.vcxproj
+++ b/hsrl-test2/hsrl-test2.vcxproj
@@ -79,6 +79,7 @@
     <ClCompile Include="jni\MainEngine.cpp" />
     <ClCompile Include="jni\mainEntry.cpp" />
     <ClCompile Include="jni\mainOpenGL.cpp" />
+    <ClCompile Include="jni\prelibs\math\Matrix4.cpp" />
     <ClCompile Include="jni\prelibs\math\vecmath.cpp" />
     <ClCompile Include="jni\prelibs\mySTL\MyMap.cpp" />
     <ClCompile Include="jni\prelibs\native_app_glue\android_native_app_glue.c" />
@@ -90,6 +91,7 @@
     <ClInclude Include="jni\hsrl\tools.h" />
     <ClInclude Include="jni\MainEngine.h" />
     <ClInclude Include="jni\mainOpenGL.h" />
+    <ClInclude Include="jni\prelibs\math\Matrix4.h" />
     <ClInclude Include="jni\prelibs\math\vecmath.h" />
     <ClInclude Include="jni\prelibs\mySTL\MyMap.h" />
     <ClInclude Include="jni\prelibs\native_app_glue\android_native_app_glue.h" />
