--- a/hsrl-test2/hsrl-test2.vcxproj.filters
+++ b/hsrl-test2/hsrl-test2.vcxproj.filters
@@ -89,6 +89,9 @@
     <ClCompile Include="jni\prelibs\math\vecmath.cpp">
       <Filter>Source files\prelibs\math</Filter>
     </ClCompile>
+    <ClCompile Include="jni\prelibs\math\Matrix4.cpp">
+      <Filter>Source files\prelibs\math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="jni\hsrl\tools.h">
@@ -116,6 +119,9 @@
       <Filter>Source files\prelibs\mySTL</Filter>
     </ClInclude>
     <ClInclude Include="jni\prelibs\math\vecmath.h">
+      <Filter>Source files\prelibs\math</Filter>
+    </ClInclude>
+    <ClInclude Include="jni\prelibs\math\Matrix4.h">
       <Filter>Source files\prelibs\math</Filter>
     </ClInclude>
   </ItemGroup>
