--- a/hsrl-test2/hsrl-test2.vcxproj
+++ b/hsrl-test2/hsrl-test2.vcxproj
@@ -79,6 +79,9 @@
     <ClCompile Include="jni\MainEngine.cpp" />
     <ClCompile Include="jni\mainEntry.cpp" />
     <ClCompile Include="jni\mainOpenGL.cpp" />
+    <ClCompile Include="jni\prelibs\data_core\JSNumber.cpp" />
+    <ClCompile Include="jni\prelibs\data_core\JSObject.cpp" />
+    <ClCompile Include="jni\prelibs\data_core\JSON.cpp" />
     <ClCompile Include="jni\prelibs\math\Matrix4.cpp" />
     <ClCompile Include="jni\prelibs\math\vecmath.cpp" />
     <ClCompile Include="jni\prelibs\mySTL\MyMap.cpp" />
@@ -91,6 +94,9 @@
     <ClInclude Include="jni\hsrl\tools.h" />
     <ClInclude Include="jni\MainEngine.h" />
     <ClInclude Include="jni\mainOpenGL.h" />
+    <ClInclude Include="jni\prelibs\data_core\JSNumber.h" />
+    <ClInclude Include="jni\prelibs\data_core\JSObject.h" />
+    <ClInclude Include="jni\prelibs\data_core\JSON.h" />
     <ClInclude Include="jni\prelibs\math\Matrix4.h" />
     <ClInclude Include="jni\prelibs\math\vecmath.h" />
     <ClInclude Include="jni\prelibs\mySTL\MyMap.h" />
