The basic operation of JSON is deployed.

--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -83,8 +83,10 @@
     <ClInclude Include="data_core\base\JSObject.h" />
     <ClInclude Include="data_core\base\List.h" />
     <ClInclude Include="data_core\base\MemoryManagement.h" />
+    <ClInclude Include="data_core\JSKeyValue.h" />
     <ClInclude Include="data_core\JSNumber.h" />
     <ClInclude Include="data_core\JSON.h" />
+    <ClInclude Include="data_core\JSString.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="test.h" />
@@ -95,8 +97,10 @@
     <ClCompile Include="data_core\base\JSObject.cpp" />
     <ClCompile Include="data_core\base\List.cpp" />
     <ClCompile Include="data_core\base\MemoryManagement.cpp" />
+    <ClCompile Include="data_core\JSKeyValue.cpp" />
     <ClCompile Include="data_core\JSNumber.cpp" />
     <ClCompile Include="data_core\JSON.cpp" />
+    <ClCompile Include="data_core\JSString.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
