--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="data_core\JSKeyValue.h" />
     <ClInclude Include="data_core\JSNumber.h" />
     <ClInclude Include="data_core\JSON.h" />
+    <ClInclude Include="data_core\JSParsingObject.h" />
     <ClInclude Include="data_core\JSString.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -100,6 +101,7 @@
     <ClCompile Include="data_core\JSKeyValue.cpp" />
     <ClCompile Include="data_core\JSNumber.cpp" />
     <ClCompile Include="data_core\JSON.cpp" />
+    <ClCompile Include="data_core\JSParsingObject.cpp" />
     <ClCompile Include="data_core\JSString.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="test.cpp" />
