--- a/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="data_core\JSString.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="data_core\JSParsingObject.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -84,6 +87,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="data_core\JSString.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="data_core\JSParsingObject.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
