--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="data_core\JSON.h" />
     <ClInclude Include="data_core\JSString.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="swift\FunctionsClosures\Closure.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="test.h" />
   </ItemGroup>
@@ -102,6 +103,7 @@
     <ClCompile Include="data_core\JSON.cpp" />
     <ClCompile Include="data_core\JSString.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="swift\FunctionsClosures\Closure.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
